<resources>
    <string name="app_name">ThatMovieApp</string>
    <string name="release_date">Release date</string>
    <string name="genres">Genres</string>
    <string name="summary">Summary</string>

    <string name="onboarding_get_started">Get Started</string>
    <string name="onboarding_message_discover">Discover Your</string>
    <string name="onboarding_message_favorite">Favorite Show</string>
    <string name="onboarding_message_watch">Watch Now</string>
    <string name="onboarding_message_description">you can browse and shows by genre, search for specific title, or check out our recommendation</string>

    <string name="main_search">Search…</string>
    <string name="main_popular_movies">Popular Movies</string>
    <string name="main_upcoming_movies">Upcoming Movies</string>
    <string name="main_upcoming_top_rated">Top Rated Movies</string>

    <string name="main_popular_tv">Popular TV Shows</string>
    <string name="main_upcoming_tv">Upcoming TV Shows</string>
    <string name="main_upcoming_top_rated_tv">Top Rated TV Shows</string>

    <string name="detail_duration_min">%d min</string>
    <string name="detail_rated">%s (%d)</string>
    <string name="detail_similar_movies">Similar</string>

    <string name="error_network">Network error occurred. Please check your internet connection.</string>
    <string name="error_server">Server error occurred. Please try again later.</string>
    <string name="error_unknown">An unknown error occurred. Please try again.</string>

</resources>